--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.9.3 Fri Feb  3 2017 Pavel Shaydo <zwon@cpan.org>
+    - Add dependency on IO::Socket::SSL
+    - Upgrade to librdkafka v0.9.3
+
 0.9.1 Fri Oct 14 2016 Pavel Shaydo <zwon@cpan.org>
     - First version, released on an unsuspecting world.
 
