--- a/README
+++ b/README
@@ -1,29 +1,29 @@
 NAME
+    Alien::Librdkafka - build and install librdkafka
 
-Alien::Librdkafka
+DESCRIPTION
+    The distribution provides the way to build and access librdkafka from
+    perl.
 
-INSTALLATION
+SEE ALSO
+    Alien::Base
 
-To install this module, run the following commands:
+    <https://github.com/edenhill/librdkafka>
 
-    perl Build.PL
-    ./Build
-    ./Build test
-    ./Build install
+AUTHOR
+    The Original author is Pavel Shaydo
 
-SUPPORT
-
-Please note that this module is not actively developed and maintained, if you
-are interested in taking it over, please contact the author
+    The current maintainer is Graham Ollis <plicease@cpan.org>
 
 LICENSE AND COPYRIGHT
+    Copyright (C) 2016, 2017, 2018 Pavel Shaydo
 
-Copyright (C) 2016, 2017, 2018 Pavel Shaydo
+    This program is free software; you can redistribute it and/or modify it
+    under the terms of either: the GNU General Public License as published
+    by the Free Software Foundation; or the Artistic License.
 
-This program is free software; you can redistribute it and/or modify it
-under the terms of either: the GNU General Public License as published
-by the Free Software Foundation; or the Artistic License.
+    See http://dev.perl.org/licenses/ for more information.
 
-See http://dev.perl.org/licenses/ for more information.
+    For librdkafka license and copyright check
+    <https://github.com/edenhill/librdkafka>
 
-For librdkafka license and copyright check L<https://github.com/edenhill/librdkafka>
