switch to alienfile

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
-Revision history for Alien-Librdkafka
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
 
 1.02 2019-07-19 18:11:02 -0400
   - Upgrade to 1.1.0 for share build
